# attokv

./: .clang-format  CMakeLists.txt  Makefile
client/: CMakeLists.txt
client/include/attokv_client/: client.h
client/src/: client.cpp  main.cpp
include/kvcli/: command.h  store.h
lib/: CMakeLists.txt
lib/include/attokv/: error.h  message.h  socket.h  util.h
lib/src/: message.cpp  socket.cpp  util.cpp
server/: CMakeLists.txt
server/include/attokv_server/: command.h  executor.h  message.h  server.h  store.h
server/src/: command.cpp  executor.cpp  main.cpp  message.cpp  server.cpp  store.cpp
src/: command.cpp  main.cpp  store.cpp
